[package]
name = "async-prost"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/async-prost"
repository = "https://github.com/tyrchen/async-prost"
homepage = "https://github.com/tyrchen/async-prost"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
byteorder = "1"
futures-core = "0.3"
futures-sink = "0.3"
prost = "0.7"
serde = "1"
tokio = { version = "1", features = ["net"] }


[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
