[package]
name = "async-prost"
version = "0.3.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/async-prost"
repository = "https://github.com/tyrchen/async-prost"
homepage = "https://github.com/tyrchen/async-prost"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
byteorder = "1.4.3"
either = "1.6.1"
futures-core = "0.3.21"
futures-sink = "0.3.21"
prost = "0.10.4"
serde = "1.0.137"
tokio = { version = "1.18.2", features = ["net"] }

[dev-dependencies]
futures = "0.3.21"
futures-util = "0.3.21"
tokio = { version = "1.18.2", features = ["full"] }
tokio-tower = "0.6.0"
slab = "0.4.6"
tower = { version = "0.4.12", features = ["full"] }
